# paperverse

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: PRD.md  UserStory.md
docs/ralph/: prd.json
